Fix some syntax errors